[package]
name = "qsl-attachments"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
axum = { version = "0.7", features = ["json", "macros"] }
base64 = "0.22"
hex = "0.4"
http = "1"
http-body-util = "0.1"
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
